# lab--4

./: CMakeLists.txt  Makefile  main.cpp
lab--4_n/: build.ninja  rules.ninja
