project(lab--4)
cmake_minimum_required(VERSION 3.22)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Lab--4_n)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Lab--4_n)
set(CMAKE_GENERATOR "Ninja")
add_library(lab--4_lib SHARED calculator.cpp)
add_executable(lab--4 main.cpp)
target_link_libraries(lab--4 lab--4_lib)